testsuite/tests/parser/should_fail/ParserNoTH1.hs
f = $(x)   -- #7396
