testsuite/tests/parser/should_fail/ParserNoTH1.stderr

ParserNoTH1.hs:1:5: warning: [-Woperator-whitespace-ext-conflict (in -Wdefault)]
    The prefix use of a ‘$’ would denote an untyped splice
      were the TemplateHaskell extension enabled.
    Suggested fix: Add whitespace after the ‘$’.

ParserNoTH1.hs:1:5: error:
    parse error on input ‘$’
    Suggested fix: Perhaps you intended to use TemplateHaskell
